# Unlocking-the-Power-of-Pyspark

./: .gitignore  01_Principles.ipynb  02_ML.ipynb  03_Cloud_Motivation.ipynb  Dockerfile  README.md  pyproject.toml  requirements.txt
data/: bundesliga.csv  bundesliga_.csv  customer_master_data.csv  customer_master_data_wo_target.csv  customer_usage_data.csv  mocked_customer_data.csv  mocked_demographics.csv  model.pkl
data/bundesliga/: .part-00000-74092bc7-2d4b-4614-b20a-8ee4cdadb0e9-c000.snappy.parquet.crc  part-00000-74092bc7-2d4b-4614-b20a-8ee4cdadb0e9-c000.snappy.parquet
data/customer_master_data/: .part-00000-6b21e104-9ae1-4595-bd5a-424ce93ee6c0-c000.snappy.parquet.crc  .part-00000-c0a32bcb-055b-4093-ae3c-6a1b0433a057-c000.snappy.parquet.crc  part-00000-6b21e104-9ae1-4595-bd5a-424ce93ee6c0-c000.snappy.parquet  part-00000-c0a32bcb-055b-4093-ae3c-6a1b0433a057-c000.snappy.parquet
data/customer_master_data_wo_target/: .part-00000-e318dabb-8ffa-4496-ae80-c7c61e7f159d-c000.snappy.parquet.crc  .part-00000-e6117242-0f87-476b-9c49-5a897d669ba3-c000.snappy.parquet.crc  part-00000-e318dabb-8ffa-4496-ae80-c7c61e7f159d-c000.snappy.parquet  part-00000-e6117242-0f87-476b-9c49-5a897d669ba3-c000.snappy.parquet
data/customer_usage_data/: .part-00000-4a93af5b-d25b-4c78-8f9e-aef9f5eec359-c000.snappy.parquet.crc  (+3 more)
data_prep/: build_synthetic_data.py  csv_to_parquet.py  drop_na.py  upload_s3.py
sandbox/: _ml_housing.ipynb  aws_glue_template.py  business_case_native.py  business_case_spark.py  business_case_spark_glue.py  simple_ml_native.py  simple_ml_spark.py
(+10 files in other folders)
