[tool.poetry]
name = "Unlocking-the-power-of-Pyspark"
version = "0.1.0"
description = ""
authors = ["CarstenFrommhold <carsten.frommhold@datadrivers.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.4.0"
pandas = "^2.0.1"
pyarrow = "^12.0.0"
fastparquet = "^2023.4.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"
boto3 = "^1.26.133"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
